# wandr

./: .env.example  .gitignore  AGENTS.md  pyproject.toml
ai/: main.py  pyproject.toml
ai/agents/: itinerary.py  logistics.py  narrator.py  orchestrator.py  profiler.py  stop_research.py
ai/api/: server.py
ai/config/: settings.py
ai/models/: __init__.py  api.py  events.py  persona.py  place.py  trip.py
ai/pipeline/: stop_processor.py
ai/tools/: exceptions.py  maps.py
frontend/: index.html  package-lock.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AudioPlayer.jsx  Footer.jsx  PersonaGrid.jsx  StopCard.jsx  TopNav.jsx
frontend/src/data/: mockItinerary.js
frontend/src/hooks/: usePlanStream.js
frontend/src/pages/: HomePage.jsx  ItineraryPage.jsx  RefinePage.jsx  VerifyPage.jsx
plan/: DESIGN.md
wandr/: __init__.py  main.py
wandr/agents/: itinerary.py  narrator.py  orchestrator.py  profiler.py
wandr/config/: settings.py
wandr/models/: __init__.py  audio.py  research.py  route.py
wandr/pipeline/: stop_processor.py
wandr/tools/: maps.py  tts.py
